- feat: - Movies, actors and companies services created.

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -5,6 +5,9 @@
       "movies": "Películas",
       "actors": "Actores",
       "movie-studios": "Estudios"
+    },
+    "movies-list": {
+      "title": "Películas"
     }
   }
 }
