- feat (Movies-list component): Added functionality to the Movies list. - feat (Movies-list component): Button create movie added to the movies list. - feat (Movie-card component): Added functionality to the Movie card. - feat (not-image directive): Not image directive created. When a image doesn't have url-poster, load the default not-image.

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -8,6 +8,12 @@
     },
     "movies-list": {
       "title": "Películas"
+    },
+    "manage-movie": {
+      "create-title": "Nueva película"
     }
+  },
+  "movies-list": {
+    "empty": "No hay películas"
   }
 }
