- feat (delete-movie.component): Added functionality for delete movie in the database.

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -45,5 +45,9 @@
     "not-found": "Sin resultados",
     "select-actor": "Selecciona un actor",
     "select-company": "Selecciona un estudio"
+  },
+  "errors": {
+    "title": "Error",
+    "server-error": "Se ha producido un error en el servidor"
   }
 }
