- feat (manage-movie.component): Added functionality for create movie in the database.

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -48,6 +48,8 @@
   },
   "errors": {
     "title": "Error",
-    "server-error": "Se ha producido un error en el servidor"
+    "server-error": "Se ha producido un error en el servidor",
+    "required": "El campo es obligatorio",
+    "year-incorrect": "Debe de tener 4 dígitos"
   }
 }
